css/styles.css
/* ... */
body
{
     font-family: "Roboto", sans-serif;

}

nav,footer
{
    padding: 1rem 2rem;
    background-color: var(--main-ui-colour);
}

nav h1
{
     font-size: 2rem;
     color: white;
}


main
{
    background-color: var(--main-bg);
    
}

.button-reset
{
  -webkit-appearance: none;
  border-radius: 0;
  text-align: inherit;
  background: none;
  box-shadow: none;
  padding: 0;
  cursor: pointer;
  border: none;
  color: inherit;
  font: inherit;
}

.grid
{
    padding: 1rem;
    width: 100%;
    display: grid;
    grid-template-rows: repeat(100, 25px);
    grid-template-columns: repeat(75, 25px);
    border-radius: 5px;
}

.grid-main-canvas--slider
{
    grid-row: 1/27;
    grid-column: 1/32;
    display: grid;
    grid-template-rows: repeat(27, 25px);
    grid-template-columns: repeat(32, 25px);
}

.canvas-container
{
    grid-row: 1/24;
    grid-column: 1/32;
    padding: 0.4rem;
    border-radius: 5px 5px 0 0;
    background-color: var(--main-ui-colour);
    display: flex;
    align-items: center;
    justify-content: center;
    box-shadow: rgba(26, 29, 32, 0.78).95px 1.95px 2.6px;
}

.lightness-container
{
    grid-row: 24/27;
    grid-column: 1/32;
    padding: 1rem 2rem;
    background-color: var(--main-ui-colour);
    color: var(--main-border-colour);
    border-radius: 0 0 5px 5px;
    display: flex;
    justify-content: center;
    gap: 0 2rem;
    align-items: center;
    box-shadow: rgba(26, 29, 32, 0.78).95px 1.95px 2.6px;
}

.lightness-container p {
    font-size: 1.5rem;
    font-weight: bold;
    flex-basis: 10%;
}

.lightness-range
{
  flex-basis: 80%;
  -webkit-appearance: none;
  height: 6px;
  border-radius: 3px;
  background: white;
  outline: none;
  opacity: 0.9;
  transition: opacity 0.2s;

}

.lightness-range::-webkit-slider-thumb
{
   -webkit-appearance: none;
   appearance: none;
   background-color: #343A40;
   border: 2px solid #efefef;
   width: 25px;
   height: 25px;
   border-radius: 5px; 
   cursor: pointer;
}

canvas
{
    cursor: crosshair;
    border: 3px solid var(--main-border-colour);
}

.grid-main-colour-selection
{
    grid-row: 1/10;
    grid-column: 33/44;
    display: flex;
    justify-content: space-around;
    background-color: var(--main-ui-colour);
    border-radius: 5px 5px 0 0;
    color: white;
    padding: 0.6rem;
    box-shadow: rgba(26, 29, 32, 0.78).95px 1.95px 2.6px;
}

.selected-container
{
    display: flex;
    flex-direction: column;
    row-gap: 1rem;
    justify-content: flex-start;
    align-items: center;
    padding-block: 1rem;
}

#selected-one-input,#selected-two-input
{
    width: 100px;
    height: 30px;
    background-color: var(--main-bg);
    padding: 0.6rem;
    border-radius: 5px;
    color: white;
}

.input-selected
{
    border: 2px solid white;
}

.error-input
{
    border: 2px solid red;
}

.grid-main-colour-history
{
    grid-row: 22/27;
    grid-column: 33/60;
    display: grid;
    grid-template-rows: repeat(5, 25px);
    grid-template-columns: repeat(27, 25px);
}

.colour-array
{
    display: flex;
    grid-row: 3/6;
    grid-column: 1/28;
    padding: 1rem;
    gap: 1rem;
    justify-content: center;
    align-items: center;
    background-color: var(--main-ui-colour);
    border-radius: 0 5px 5px 5px;
    box-shadow: rgba(26, 29, 32, 0.78).95px 1.95px 2.6px;
}

.colour-array-title
{
    display: flex;
    color: white;
    grid-row: 1/3;
    grid-column: 1/8;
    padding: 1rem;
    justify-content: center;
    align-items: center;
    background-color: var(--main-ui-colour);
    border-radius: 5px 5px 0 0;
    font-weight: bold;
    box-shadow: rgba(26, 29, 32, 0.78).95px 1.95px 2.6px;
}

.colour-history, .shade-button
{
    width: 50px;
    height: 50px;
    border: 2px solid var(--main-border-colour);
    background-color: #212529;
    border-radius: 5px;
}

.main
{
    border: 2px solid var(--active-light);
}

.colour-history
{
    background-color: var(--main-ui-colour);
    cursor: pointer;
}

.colour-history:hover, .shade-button:hover
{
    border: 2px solid var(--hover-highlight);
}

.shades-layout
{
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: var(--main-ui-colour);
    box-shadow: rgba(26, 29, 32, 0.78).95px 1.95px 2.6px;
}

.shades-headers
{
    background-color: var(--main-ui-colour);
    color: white;
    border-radius: 5px 5px 0 0;
    display: flex;
    align-items: center;
    justify-content: center;
    box-shadow: rgba(26, 29, 32, 0.78).95px 1.95px 2.6px;
}

.grid-main-shades
{
    grid-row: 28/57;
    grid-column: 1/60;
    display: grid;
    grid-template-rows: repeat(39, 25px);
    grid-template-columns: repeat(75, 25px);
}

.complementary-shades
{
    grid-row: 4/6;
    grid-column: 1/9;
}

.complementary-shades p
{
    font-weight: bold;
}

.shades
{
    grid-row: 6/9;
    grid-column: 1/16;
    border-radius: 0 5px 0 0;
}

.c-shades
{
    grid-row: 9/12;
    grid-column: 1/16;
    border-radius: 0 0 5px 5px;
}

.analogous-shades
{
    grid-row: 4/6;
    grid-column: 18/26;
}

.analogous-shades p 
{
 font-weight: bold;
}

.shades-ana-pos
{
    grid-row: 6/9;
    grid-column: 18/33;
    border-radius: 0 5px 0 0;
}
.shades-ana-main
{
    grid-row: 9/12;
    grid-column: 18/33;
    border-radius: 0;
}
.shades-ana-neg
{
    grid-row: 12/15;
    grid-column: 18/33;
    border-radius: 0 0 5px 5px;
}

.mono-shades
{
    grid-row: 4/6;
    grid-column: 35/44;
}

.mono-shades p 
{
 font-weight: bold;
}

.shades-mono-pos
{
    grid-row: 6/9;
    grid-column: 35/50;
    border-radius: 0 5px 0 0;
}

.shades-mono-main
{
    grid-row: 9/12;
    grid-column: 35/50;
    border-radius: 0 0 0 0;
}

.shades-mono-neg
{
    grid-row: 12/15;
    grid-column: 35/50;
    border-radius: 0 0 5px 5px;
}

.comp-split-shades
{
    grid-row: 16/18;
    grid-column: 1/11;
}

.comp-split-shades p
{
    font-weight: bold;
}

.comp-split-main
{
    grid-row: 18/21;
    grid-column: 1/16;
    border-radius: 0 5px 0 0;
}
/* ... */

